@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.71">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.72">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,8 +25,11 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.71 [20230513]:
-- Fix mp4upload embed extractor
+Changelog 0.3.72 [20230515]:
+- Added Manual Override Future Settings 
+- Added Self Hosting Api Settings
+- Added instructions
+- Fix crash on zoro subtitle handling
     </news>
   </extension>
 </addon>
