@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 """
-    Added by umbrelladev 10-6-22
-    Redisigned by Goldenfreddy0703 2-5-23
+    Made by umbrelladev 10-6-22
+    Added by Goldenfreddy0703 5-15-23
 """
 from resources.lib.windows.base import BaseDialog
 
@@ -13,7 +13,6 @@ class TextViewerXML(BaseDialog):
         self.window_id = 2060
         self.heading = kwargs.get('heading')
         self.text = kwargs.get('text')
-        self.text_2 = kwargs.get('text_2')
 
     def run(self):
         self.doModal()
@@ -28,6 +27,5 @@ class TextViewerXML(BaseDialog):
             self.close()
 
     def set_properties(self):
-        self.setProperty('otaku.text_2', self.text_2)
         self.setProperty('otaku.text', self.text)
         self.setProperty('otaku.heading', self.heading)
