@@ -1,0 +1,71 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+	<controls>
+		<control type="group">
+			<left>280</left>
+			<top>50</top>
+			<control type="group">
+				<width>1360</width>
+				<control type="image">
+					<height>980</height>
+					<texture colordiffuse="FF555555">common/black.png</texture>
+				</control>
+				<control type="image">
+					<height>100</height>
+					<texture>common/texture.png</texture>
+				</control>
+				<control type="image">
+					<left>-10</left>
+					<top>-10</top>
+					<width>120</width>
+					<height>120</height>
+					<align>left</align>
+					<aligny>top</aligny>
+					<aspectratio aligny="top">keep</aspectratio>
+					<texture>common/trans-goku.png</texture>
+				</control>
+				<control type="label">
+					<top>40</top>
+					<left>105</left>
+					<width max="1115">auto</width>
+					<height>20</height>
+					<font>font16</font>
+					<textcolor>white</textcolor>
+					<align>center</align>
+					<aligny>center</aligny>
+					<label>$INFO[Window().Property(otaku.heading)]</label>
+				</control>
+				<control type="textbox" id="2000">
+					<left>45</left>
+					<top>114</top>
+					<width>1254</width>
+					<height>830</height>
+					<onup>2000</onup>
+					<ondown>2000</ondown>
+					<scrolltime tween="sine">400</scrolltime>
+					<font>font14</font>
+					<textcolor>white</textcolor>
+					<label>$INFO[Window().Property(otaku.text)]</label>
+					<pagecontrol>2060</pagecontrol>
+				</control>
+				<control type="scrollbar" id="2060">
+					<left>1320</left>
+					<top>114</top>
+					<width>30</width>
+					<height>850</height>
+					<texturesliderbackground border="15">scrollbars/scrollbaruni-bg.png</texturesliderbackground>
+					<texturesliderbar border="15">scrollbars/scrollbaruni-bar.png</texturesliderbar>
+					<texturesliderbarfocus border="15">scrollbars/scrollbaruni-bar-focus.png</texturesliderbarfocus>
+					<textureslidernib>scrollbars/scrollbaruni-nib.png</textureslidernib>
+					<textureslidernibfocus>scrollbars/scrollbaruni-nib.png</textureslidernibfocus>
+					<onleft>2060</onleft>
+					<onright>2060</onright>
+					<onup>2060</onup>
+					<ondown>2060</ondown>
+					<showonepage>false</showonepage>
+					<orientation>vertical</orientation>
+				</control>
+			</control>
+		</control>
+	</controls>
+</window>
